--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nz-tabset>
-    <nz-tab nzTitle="Tab 1"><app-todo-huy></app-todo-huy></nz-tab>
-    <nz-tab nzTitle="Tab 2"><app-todo-toan></app-todo-toan></nz-tab>
-    <nz-tab nzTitle="Tab 3">Content of Tab Pane 3</nz-tab>
+    <nz-tab nzTitle="Todo-Huy"><app-todo-huy></app-todo-huy></nz-tab>
+    <nz-tab nzTitle="Todo-Toan"><app-todo-toan></app-todo-toan></nz-tab>
+   
   </nz-tabset>
